Games/PenaltyKicks/penaltykicksapi-k8s/penaltykicksapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penaltykicksapi
  namespace: onaimhub
  labels:
    app: penaltykicksapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: penaltykicksapi
  template:
    metadata:
      labels:
        app: penaltykicksapi
    spec:
      containers:
        - name: penaltykicksapi
          image: gvgroup/onaim-penaltykicks:latest  # Replace with DockerHub path
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /app/appsettings.json
              name: penaltykicksapi-cm0
              subPath: appsettings.json
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub-secret
      volumes:
        - configMap:
            items:
              - key: appsettings.json
                path: appsettings.json
            name: penaltykicksapi-cm0
          name: penaltykicksapi-cm0
